Actualise unit test for dCounter