@@ -29,26 +29,11 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  */
-package pko.KiCadLogicalSchemeSimulator.components.tester;
-import pko.KiCadLogicalSchemeSimulator.api.bus.Bus;
-import pko.KiCadLogicalSchemeSimulator.api.schemaPart.SchemaPart;
 
-public class TestOutBus extends SchemaPart {
-    public Bus bus;
-
-    protected TestOutBus(String id, String sParam) {
-        super(id, sParam);
-        int size;
-        if (params.containsKey("size")) {
-            size = Integer.parseInt(params.get("size"));
-        } else {
-            size = 8;
-        }
-        addOutBus("Out", size);
-    }
-
-    @Override
-    public void initOuts() {
-        bus = getOutBus("Out");
+test {
+    doFirst {
+        jvmArgs += [
+                '--add-exports', 'KiCadLogicalSchemeSimulator.components.dCounter/pko.KiCadLogicalSchemeSimulator.components.dCounter=ALL-UNNAMED',
+        ]
     }
 }
